BUILD-2789 Override license with GPL3

--- a/.github/sonarsource.yaml
+++ b/.github/sonarsource.yaml
@@ -4,3 +4,5 @@ extra:
   license:
     path: LICENSE
     spdx_id: GPL-3.0-or-later
+    different_license: GPL-3.0
+    reason: This project is making use of GPL licensed code
